syntax = "proto3";

package meme.auth;
option go_package = "github.com/materkov/meme9/api/auth";

// Auth service
service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (LoginResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string userId = 2;
  string username = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string userId = 1;
}

