syntax = "proto3";

package meme.json_api;
option go_package = "github.com/materkov/meme9/api/json_api";

// JSON API service definitions for REST endpoints
service JsonAPI {
  // Feed API - GET /api/feed
  rpc GetFeed(FeedRequest) returns (FeedResponse);
  
  // Publish API - POST /api/publish
  rpc Publish(PublishRequest) returns (PublishResponse);
  
  // Login API - POST /api/login
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Register API - POST /api/register
  rpc Register(RegisterRequest) returns (LoginResponse);
  
  // UserPosts API - POST /api/userPosts
  rpc GetUserPosts(UserPostsRequest) returns (UserPostsResponse);
  
  // Subscribe API - POST /api/subscribe
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
  
  // Unsubscribe API - POST /api/unsubscribe
  rpc Unsubscribe(SubscribeRequest) returns (SubscribeResponse);
  
  // SubscriptionStatus API - POST /api/subscriptionStatus
  rpc GetSubscriptionStatus(SubscribeRequest) returns (SubscribeResponse);
}

// Feed API - GET /api/feed
message FeedRequest {
  string type = 1; // "all" or "subscriptions"
}

message FeedPostResponse {
  string id = 1;
  string text = 2;
  string user_id = 3;
  string username = 4;
  string created_at = 5; // RFC3339 format
}

message FeedResponse {
  repeated FeedPostResponse posts = 1;
}

// Publish API - POST /api/publish
message PublishRequest {
  string text = 1;
}

message PublishResponse {
  string id = 1;
}

// Login API - POST /api/login
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  string username = 3;
}

// Register API - POST /api/register
message RegisterRequest {
  string username = 1;
  string password = 2;
}

// Uses LoginResponse

// UserPosts API - POST /api/userPosts
message UserPostsRequest {
  string user_id = 1;
}

message UserPostResponse {
  string id = 1;
  string text = 2;
  string user_id = 3;
  string username = 4;
  string created_at = 5; // RFC3339 format
}

message UserPostsResponse {
  repeated UserPostResponse posts = 1;
}

// Subscribe API - POST /api/subscribe
message SubscribeRequest {
  string user_id = 1;
}

message SubscribeResponse {
  bool subscribed = 1;
}

// Unsubscribe API - POST /api/unsubscribe
// Uses SubscribeRequest and SubscribeResponse

// SubscriptionStatus API - POST /api/subscriptionStatus
// Uses SubscribeRequest and SubscribeResponse

// Error response (used across all endpoints)
message ErrorResponse {
  string error = 1;
  string error_details = 2;
}

